--- a/MODAMS.Localization/ValidationMessages.resx
+++ b/MODAMS.Localization/ValidationMessages.resx
@@ -126,6 +126,12 @@
   <data name="InvalidRange" xml:space="preserve">
     <value>The {0} field must be between {1} and {2}.</value>
   </data>
+  <data name="NumberOfAssetsGreaterThanZero" xml:space="preserve">
+    <value>Number of Assets must be greater than 0</value>
+  </data>
+  <data name="NumberOfAssetsRequired" xml:space="preserve">
+    <value>Number of assets to verify is required.</value>
+  </data>
   <data name="Required" xml:space="preserve">
     <value>The {0} field is required.</value>
   </data>
